www/css/carousel.scss
form {
  position: relative;
  width: 600px;
  height: 400px;
  filter: drop-shadow(0 0 0.25rem rgb(var(--col-shadow)));
  ol {
    position: absolute;
    z-index: 1;
    width: 100%;
    height: 100%;
    padding: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 4px;
    li {
      input,
      &::marker {
        display: none;
        content: "";
      }
      label {
        position: relative;
        top: 75%;
        z-index: 2;
        display: block;
        width: 0.5rem;
        height: 0.5rem;
        background-color: #111;
        border-radius: 50%;
        cursor: pointer;
      }
      section {
        border-radius: 16px;
        border: 10px solid white;
        background: white;
        position: absolute;
        z-index: 1;
        top: 0;
        left: 0;
        width: calc(100% - 20px - 32px);
        padding: 16px;
        min-height: 110%;
        img {
          width: 100%;
          border-radius: 16px;
          aspect-ratio: 16/9;
        }
        h3 {
          font-size: 22px;
        }
        h3,
        p {
          font-family: "Chewy";
          color: rgb(var(--black));
        }
      }
      input:checked + label {
        background-color: white;
      }
      input:checked ~ section img {
        opacity: 1;
        animation: fade 0.5s forwards;
        @keyframes fade {
          0% {
            opacity: 0.9;
          }
          100% {
            opacity: 1;
          }
        }
      }
      input:not(:checked) ~ section {
        display: none;
      }
    }
  }
  button {
    position: absolute;
    z-index: 2;
    bottom: 17%;
    margin: 0px 48px;
  }
  button.button--next {
    right: 0;
  }
}

